tests/expectations/compiler/dynamic_dispatch/dynamic_get_or_use_wrong_arg_count_fail.out
Error [ETYC0372181]: `_dynamic_get_or_use` requires 5 arguments, but found 4.
    --> compiler-test:11:20
     |
  11 |     let val: u64 = _dynamic_get_or_use::[u64](prog, net, m, key);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
